--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "express": "^5.1.0",
+    "path": "^0.12.7",
     "vite": "^7.1.9",
     "vite-express": "^0.21.1",
     "ws": "^8.18.3"
