--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "path": "^0.12.7",
+    "pug": "^3.0.3",
     "vite": "^7.1.9",
     "vite-express": "^0.21.1",
     "ws": "^8.18.3"
