--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.1.0",
+    "express-ws": "^5.0.2",
     "path": "^0.12.7",
     "pug": "^3.0.3",
     "vite": "^7.1.9",
     "vite-express": "^0.21.1",
     "ws": "^8.18.3"
   },
-  "scripts":{
-    "start":"node server.js"
+  "scripts": {
+    "start": "node server.js"
   }
 }
